--- a/index.html
+++ b/index.html
@@ -42,8 +42,11 @@
 						<ul>
 							<li><a href="index.html">Home</a></li>
 							<li><a href="generic.html">Launching into Computer Science</a></li>
-							<li><a href="generic.html">Tempus etiam</a></li>
-							<li><a href="generic.html">Consequat dolor</a></li>
+							<li><a href="generic.html">Secure Software Development</a></li>
+							<li><a href="generic.html">Object Oriented Programming</a></li>
+							<li><a href="generic.html">Security Risk Management</a></li>
+							<li><a href="generic.html">Software Engineering Project Management</a></li>
+							<li><a href="generic.html">Research Methods and Professional Practice</a></li>
 							<li><a href="elements.html">Elements</a></li>
 						</ul>
 					</nav>
@@ -115,7 +118,7 @@
 										<img src="images/pic06.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Veroeros</h2>
+										<h2>Research Methods and Professional Practice</h2>
 										<div class="content">
 											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
 										</div>
@@ -124,17 +127,6 @@
 								<article class="style2">
 									<span class="image">
 										<img src="images/pic07.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Research Methods and Professional Practice</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style3">
-									<span class="image">
-										<img src="images/pic08.jpg" alt="" />
 									</span>
 									<a href="generic.html">
 										<h2>Course</h2>
