--- a/launching-into-computer-science.html
+++ b/launching-into-computer-science.html
@@ -35,7 +35,7 @@
 						<h2>Menu</h2>
 						<ul>
 							<li><a href="index.html">Home</a></li>
-							<li><a href="launching-into-computer-science.html.html">Launching into Computer Science</a></li>
+							<li><a href="launching-into-computer-science.html">Launching into Computer Science</a></li>
 							<li><a href="secure-software-development.html">Secure Software Development</a></li>
 							<li><a href="object-oriented-programming.html">Object Oriented Programming</a></li>
 							<li><a href="security-risk-management.html">Security Risk Management</a></li>
