--- a/launching-into-computer-science.html
+++ b/launching-into-computer-science.html
@@ -49,9 +49,19 @@
 						<div class="inner">
 							<h1>Launching into Computer Science</h1>
 							<span class="image main"><img src="images/pic13.jpg" alt="" /></span>
-							<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique.</p>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel venenatis mauris vehicula hendrerit.</p>
-							<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
+							<p>This is the first module of the MSc Computer Science at the University of Essex Online. The goal of this module is to provide the fundamental theories and practices of computing</p>
+							<h2>Learning Outcomes</h2>
+								<ol>
+									<li>Identify and explain the architecture, structure and functionality of basic components of computer system</li>
+									<li>Demonstrate a critical understanding of core data structures and programming concepts, including algorithm computability</li>
+									<li>Critically evaluate the functionality of different types of software, i.e., operating system, utility programs, languages and applications.</li>
+									<li>Critically appraise the emerging trends in the field, such as cloud computing, big data, cyber security, and the professional and ethical requirements for dealing with such contemporary computer-based technologies.</li>
+								</ol>
+							
+							<h2>Artefacts Created</h2>
+							<h2>Reflection</h2>
+							<h2>Meeting Notes</h2>
+							<h2>Professional Skills Matrix and Action Plan</h2>
 						</div>
 					</div>
 
