--- a/object-oriented-programming.html
+++ b/object-oriented-programming.html
@@ -49,9 +49,27 @@
 						<div class="inner">
 							<h1>Object Oriented Programming</h1>
 							<span class="image main"><img src="images/pic13.jpg" alt="" /></span>
-							<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique.</p>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel venenatis mauris vehicula hendrerit.</p>
-							<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
+							<p>Module Intro</p>
+							<h2>Learning Outcomes</h2>
+								<ol>
+									<li>Appraise and critically evaluate object-oriented programming compared to other programming paradigms</li>
+									<li>Design and implement programs that demonstrate appropriate use of object-oriented design principles</li>
+									<li>Develop an object-oriented information system design, implementing this knowledge in applicable programming languages, such as Python and SQL</li>
+									<li>Develop, implement and evaluate critically information system solutions to facilitate business decisions</li>
+								</ol>
+							
+							<h2>Artefacts Created</h2>
+							<h2>Reflection</h2>
+							<h2>Meeting Notes</h2>
+							<h2>Professional Skills Matrix and Action Plan</h2>
+								<ul>
+									<li>Time management</li>
+									<li>Critical thinking and analysis</li>
+									<li>Problem-solving</li>
+									<li>Communication and Literacy skills</li>
+									<li>IT and Digital</li>
+									<li>Numeracy</li>
+									<li>Critical Reflection</li>
 						</div>
 					</div>
 
