--- a/secure-software-development.html
+++ b/secure-software-development.html
@@ -41,6 +41,7 @@
 							<li><a href="security-risk-management.html">Security Risk Management</a></li>
 							<li><a href="software-engineering-project-management.html">Software Engineering Project Management</a></li>
 							<li><a href="research-methods-and-professional-practice.html">Research Methods and Professional Practice</a></li>
+							<li><a href="about-me.html">About Me</a></li>
 						</ul>
 					</nav>
 
