--- a/index.html
+++ b/index.html
@@ -119,6 +119,17 @@
 										</div>
 									</a>
 								</article>
+								<article class="style4">
+									<span class="image">
+										<img src="images/pic12.jpg" alt="">
+									</span>
+									<a href="about-me.html">
+										<h2>About Me</h2>
+										<div class="content">
+											<p>Summarised CV</p>
+										</div>
+									</a>
+								</article>
 							</section>
 						</div>
 					</div>
