--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 									<a href="launching-into-computer-science.html">
 										<h2>Launching into Computer Science</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>The goal of this module is to provide the fundamental theories and practices of computing</p>
 										</div>
 									</a>
 								</article>
@@ -71,7 +71,7 @@
 									<a href="secure-software-development.html">
 										<h2>Secure Software Development</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>The goal of this module is to introduce students to the underpinning concepts and skills of Secure Software Development</p>
 										</div>
 									</a>
 								</article>
@@ -82,7 +82,7 @@
 									<a href="object-oriented-programming.html">
 										<h2>Object Oriented Programming</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>The goal of this module is to further develop the programming skills and to focuse on the concept of object orientation</p>
 										</div>
 									</a>
 								</article>
@@ -93,7 +93,7 @@
 									<a href="security-risk-management.html">
 										<h2>Security Risk Management</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>The goal of this module is to introduce students to the underpinning concepts and skills of Information Security & Risk Management (ISM)</p>
 										</div>
 									</a>
 								</article>
@@ -104,7 +104,7 @@
 									<a href="software-engineering-project-management.html">
 										<h2>Software Engineering Project Management</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>The goal of this module is to introduce students to the underpinning concepts and skills of Software Engineering Project Management, as well as introducing concepts of Behaviour Driven Development (BDD)</p>
 										</div>
 									</a>
 								</article>
@@ -115,11 +115,11 @@
 									<a href="research-methods-and-professional-practice.html">
 										<h2>Research Methods and Professional Practice</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>The goal of this module is to provide a practical foundation in research methods that enables students to conduct research in practical settings</p>
 										</div>
 									</a>
 								</article>
-								<article class="style4">
+								<article class="style1">
 									<span class="image">
 										<img src="images/pic12.jpg" alt="">
 									</span>
