--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
 					<div id="main">
 						<div class="inner">
 							<header>
-								<h1>Welcome to my e-Portfolio for MSc Computer Science</h1>
+								<h1>Welcome to my e-Portfolio</h1>
+								<p>I'm an MSc Computer Science student at the University of Essex Online</p>
 							</header>
 							<section class="tiles">
 								<article class="style1">
@@ -119,17 +120,7 @@
 										</div>
 									</a>
 								</article>
-								<article class="style1">
-									<span class="image">
-										<img src="images/pic12.jpg" alt="">
-									</span>
-									<a href="about-me.html">
-										<h2>About Me</h2>
-										<div class="content">
-											<p>Summarised CV</p>
-										</div>
-									</a>
-								</article>
+								
 							</section>
 						</div>
 					</div>
@@ -137,10 +128,16 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<div class="inner">
-
-							<ul class="copyright">
-								<li>&copy; Moran Ron. All rights reserved</li>
-							</ul>
+							<section>
+								<ul class="copyright">
+									<li>&copy; Moran Ron. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								</ul>
+							</section>
+							
+							<section>
+								<h2>Get in touch</h2>
+									<li><a href="mr22406@essex.ac.uk" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
+							</section>
 						</div>
 					</footer>
 
