--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 							
 							<section>
 								<h2>Get in touch</h2>
-									<li><a href="mr22406@essex.ac.uk" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
+									<li><a href=""mr22406@essex.ac.uk class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
 							</section>
 						</div>
 					</footer>
