--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 						<div class="inner">
 							<header>
 								<h1>Welcome to my e-Portfolio</h1>
-								<p>I'm an MSc Computer Science student at the University of Essex Online</p>
+								<p>I'm Moran, an MSc Computer Science student at the University of Essex Online</p>
 							</header>
 							<section class="tiles">
 								<article class="style1">
