--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 							<section>
 								<h2>Get in touch</h2>
 									<span class="icon solid style2 fa-envelope"> </span>
-									<a href="">mr22406@essex.ac.uk</a>
+									<a href="mailto:mr22406@essex.ac.uk">mr22406@essex.ac.uk</a>
 							</section>
 						</div>
 					</footer>
